# holyweb

./: .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
.github/workflows/: base.yaml
actions/api_actions/: register.py
actions/ui_actions/: UIPages.py
config/: config.py
models/: auth_obj.py  register_response.py
tests/api/: fixture.py  test_register_api.py
tests/ui/: fixture.py  test_register_form.py
ui/pages/: profile_page.py  register_page.py
